--- a/hao.html
+++ b/hao.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>字造导航 - 设计师的灵感百宝库</title>
-    <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
-    <meta name="keywords" content="字造, 字库, 字体设计, 设计资源">
+    <meta name="description" content="字造设计导航，设计师必备的灵感库。">
+    <meta name="keywords" content="字造, 导航, 设计网站, 设计导航">
     <meta name="author" content="字造">
-    <meta property="og:title" content="字造 - 专注分享字体领域优质内容">
-    <meta property="og:description" content="字造工具箱，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
+    <meta property="og:title" content="字造导航 - 设计师的灵感百宝库>
+    <meta property="og:description" content="字造设计导航，设计师必备的灵感库。">
     <meta property="og:image" content="https://www.zizao.top/logo.png">
     <meta property="og:url" content="https://www.zizao.top">
     <meta property="og:type" content="website">
-    <link rel="icon" href="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/gOQi/ico.ico" type="image/x-icon">
+    <link rel="icon" href="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/gOQi/ico.ico" type="zizaoicon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -904,7 +904,134 @@
             { "category": "A", "subcategory": "A1", "title": "文件传输", "description": "临时传送助手-端对端无需担心隐私泄露", "link": "https://wormhole.app/", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" },
             { "category": "A", "subcategory": "A1", "title": "VR看世界", "description": "坐在家里就能看到来自全世界的景色", "link": "https://www.airpano.com/", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" },
             { "category": "A", "subcategory": "A1", "title": "免费资源社区", "description": "来自湾湾的免费资源分享网站", "link": "https://free.com.tw/", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" },
-            { "category": "A", "subcategory": "A1", "title": "图像处理工具集", "description": "在线处理PDF-GIF-抠图-压缩等的图片工具", "link": "https://docsmall.com", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" }
+            { "category": "A", "subcategory": "A1", "title": "图像处理工具集", "description": "在线处理PDF-GIF-抠图-压缩等的图片工具", "link": "https://docsmall.com", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" },
+
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'B', subcategory: 'B3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'B', subcategory: 'B4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'B', subcategory: 'B5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'C', subcategory: 'C1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'C', subcategory: 'C2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'C', subcategory: 'C3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'C', subcategory: 'C4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'D', subcategory: 'D1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'D', subcategory: 'D2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'D', subcategory: 'D3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'D', subcategory: 'D4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'E', subcategory: 'E1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'E', subcategory: 'E2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'E', subcategory: 'E3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'E', subcategory: 'E4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'E', subcategory: 'E5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'E', subcategory: 'E6', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F6', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'F', subcategory: 'F7', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G3', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G4', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G5', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G6', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G7', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G8', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'G', subcategory: 'G9', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'H', subcategory: 'H1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'H', subcategory: 'H2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'I', subcategory: 'I1', title: '千本设计书籍', description: '搜集来自全球的知名设计书籍-设计师必备推荐', link: 'https://mp.weixin.qq.com/s/6A9ef-6Ik6Y7OebwuOGFDw', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'J', subcategory: 'J1', title: '脚本之家', description: '提供互联网全方位在线工具无套路分享', link: 'https://www.jb51.net/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J1', title: 'Fosshub', description: '来自全球免费好用的软件', link: 'https://www.fosshub.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J1', title: 'LookAE', description: '各类需要的设计资源，这里可能全都有', link: 'https://www.lookae.com', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J1', title: 'Google Fonts', description: '海量免费字体资源', link: 'https://fonts.google.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J1', title: '微当下载', description: '全能的各设备软件分享站', link: 'https://www.weidown.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J1', title: '小众软件', description: '分享有趣的绿色免费软件', link: 'https://www.appinn.com', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J1', title: '行客工作室', description: '各类电脑软件这里都有，下载方便', link: 'https://www.runker.net', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'J', subcategory: 'J2', title: 'SearXNG', description: '全世界最强大的元搜索引擎', link: 'https://searx.org', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J2', title: '虫部落 · 快搜', description: '聚合了全球所有的搜索工具', link: 'https://search.chongbuluo.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J2', title: '网盘超能搜', description: '聚合多个网盘搜索，常用都可搜', link: 'https://www.chaonengsou.com', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'J', subcategory: 'J3', title: 'AC文件转换', description: '【推荐】支持的类型全-使用方便', link: 'https://www.aconvert.com/cn', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J3', title: 'Convertio', description: '在线转换任何格式的视频文件', link: 'https://convertio.co/zh/video-converter', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J3', title: 'Ilovepdf', description: '支持多种格式之间进行互转', link: 'https://www.ilovepdf.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J3', title: 'Alltoall', description: '支持多达200多种格式在线转换', link: 'http://www.alltoall.net', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J3', title: 'Pdfconvertonline', description: '网站支持各类文件之间进行互转', link: 'https://www.pdfconvertonline.com/cn/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+
+            { category: 'J', subcategory: 'J4', title: '文本生成二维码', description: '仅支持文本生成二维码', link: 'https://swiftqr.tanpok.com', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J4', title: 'SMS', description: '虚拟国外手机号码短信验证', link: 'https://sms-activate.io/cn?%2Fcn=', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J4', title: '二维码生成', description: '任何内容都可以生成二维码', link: 'https://www.qrcode-monkey.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J4', title: '网址变短', description: '可以让任何网址变短的神器', link: 'https://www.shorturl.at', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J4', title: '卡通头像生成', description: '在线设计卡通头像并下载"', link: 'https://personas.draftbit.com', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'J', subcategory: 'J4', title: '聊天截图生成', description: '线上生成微信支付宝截图', link: 'http://www.12tool.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' }
+
         ];
 
         const appConfig = {
