--- a/index.html
+++ b/index.html
@@ -704,18 +704,37 @@
     <!-- 轮播图区域 -->
     <div class="slider">
         <div class="slides">
-            <!-- 轮播图1 -->
             <div class="slide">
-                <a href="https://example.com/slide1-link" target="_blank">
-                    <img src="11.webp" alt="数字化解决方案">
+                <a href="#" target="_blank">
+                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg" alt="数字化解决方案">
                     <div class="slide-content">
                     </div>
                 </a>
             </div>
-            <!-- 轮播图2 -->
             <div class="slide">
-                <a href="https://example.com/slide2-link" target="_blank">
-                    <img src="22.webp" alt="智能办公">
+                <a href="#" target="_blank">
+                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg" alt="智能办公">
+                    <div class="slide-content">
+                    </div>
+                </a>
+            </div>
+            <div class="slide">
+                <a href="#" target="_blank">
+                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg" alt="智能办公">
+                    <div class="slide-content">
+                    </div>
+                </a>
+            </div>
+            <div class="slide">
+                <a href="#" target="_blank">
+                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg" alt="智能办公">
+                    <div class="slide-content">
+                    </div>
+                </a>
+            </div>
+            <div class="slide">
+                <a href="#" target="_blank">
+                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg" alt="智能办公">
                     <div class="slide-content">
                     </div>
                 </a>
@@ -795,12 +814,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">在线设计工具导航</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -813,12 +832,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">书法网站导航</h3>
-                                <p class="short-description">设计师的灵感百宝库</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -831,12 +850,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">免费商用字体导航</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -859,12 +878,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">怎么做一款自己的字体（最全面）</h3>
-                                <p class="short-description">专为专业设计师打造的全套UI设计工具</p>
-                                <p class="full-description">专为专业设计师打造的全套UI设计工具，包含高级组件库、交互原型设计和团队协作功能。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">设计系统</span>
-                                    <span class="tag">协作</span>
-                                    <span class="tag">原型</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -877,12 +896,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">什么是GB2312标准</h3>
-                                <p class="short-description">企业级实时数据可视化和预测分析</p>
-                                <p class="full-description">内置AI辅助功能可自动识别关键指标和异常数据，帮助您做出更明智的商业决策。提供客户细分和ROI分析功能。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">BI</span>
-                                    <span class="tag">可视化</span>
-                                    <span class="tag">AI分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -895,12 +914,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">中文字库字符表</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -913,12 +932,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">千款设计素材</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -931,12 +950,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">千本设计书籍（2025最新）</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">全尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -949,12 +968,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">免费商用字体下载</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -967,12 +986,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">Adobe全家桶（2017版-2025版）</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -985,12 +1004,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">AI/PS脚本插件</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -1003,12 +1022,12 @@
                             </div>
                             <div class="content">
                                 <h3 class="title">设计师电脑必备软件</h3>
-                                <p class="short-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。</p>
-                                <p class="full-description">全渠道营销自动化平台，整合电子邮件、社交媒体和广告投放。基于用户行为的个性化营销策略，A/B测试和转化率优化工具一应俱全。</p>
+                                <p class="short-description">这是无效段落，这里现在没有详细内容</p>
+                                <p class="full-description">尽管现在这段话不具有实际意义，但是为了让其的字数可以变长做出了很大的努力</p>
                                 <div class="tags">
-                                    <span class="tag">自动化</span>
-                                    <span class="tag">多渠道</span>
-                                    <span class="tag">分析</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
+                                    <span class="tag">无标签</span>
                                 </div>
                             </div>
                         </a>
@@ -1039,12 +1058,12 @@
                         <p>微信扫码关注公众号</p>
                     </div>
                 </a>
-                
-                <a href="https://www.xiaohongshu.com/user/profile/678f47130000000007000eaa" target="_blank">
-                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Ayt2/101X100/xhs.webp" alt="小红书主页" class="icon-image">
-                </a>
+
                 <a href="https://www.douyin.com/user/MS4wLjABAAAAHS3xXmx-djagMBtv5pfJpJ_awJuC5Du8SnXDC8AYPI4Wr4lQpJllFxZDUEOCpZ8k" target="_blank">
                     <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/2Vtm/100X100/dy.webp" alt="抖音主页" class="icon-image">
+                </a>
+                <a href="https://www.xiaohongshu.com/user/profile/678f47130000000007000eaa" target="_blank">
+                    <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Ayt2/101X100/xhs.webp" alt="小红书主页" class="icon-image">
                 </a>
                 <a href="https://www.zcool.com.cn/u/15462186" target="_blank">
                     <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/mOb4/101X100/zk.webp" alt="站酷主页" class="icon-image">
