--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
             <div class="nav-links" id="navLinks">
                 <a href="#" class="active">首页</a>
                 <a href="#" target="_blank">字体产品</a>
-                <a href="#" target="_blank">正版授权</a>
                 <a href="https://zzfonts.taobao.com" target="_blank">购买字体</a>
+                <a href="https://www.zizao.top/hao" target="_blank">设计导航</a>
                 <a href="#" target="_blank">关于我们</a>
             </div>
         </div>
